--- a/pages/test.html
+++ b/pages/test.html
@@ -1,47 +1,32 @@
-
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Example Domain</title>
-
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
-    body {
-        background-color: #f0f0f2;
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        
-    }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 2em;
-        background-color: #fdfdff;
-        border-radius: 0.5em;
-        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
-    }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
-        div {
-            margin: 0 auto;
-            width: auto;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emoji Encoding Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
         }
-    }
-    </style>    
+        .emoji {
+            font-size: 2em;
+        }
+    </style>
 </head>
-
 <body>
-<div>
-    <h1>Example Domain local page</h1> &lt;
-    <p>This domain is for use in illustrative examples in documents. You may use this
-    domain in literature without prior coordination or asking for permission.</p>
-    <p><a href="https://www.iana.org/domains/example">More information...</a></p>
-</div>
+    <h1>Emoji Encoding Examples</h1>
+
+    <p><strong>Hexadecimal Encoding:</strong></p>
+    <p class="emoji">&#x1F600; Grinning Face</p>
+    <p class="emoji">&#x1F603; Smiling Face with Open Mouth</p>
+    <p class="emoji">&#x1F604; Smiling Face with Open Mouth and Smiling Eyes</p>
+    <p class="emoji">&#x1F601; Beaming Face with Smiling Eyes</p>
+
+    <p><strong>Decimal Encoding:</strong></p>
+    <p class="emoji">&#128512; Grinning Face</p>
+    <p class="emoji">&#128515; Smiling Face with Open Mouth</p>
+    <p class="emoji">&#128516; Smiling Face with Open Mouth and Smiling Eyes</p>
+    <p class="emoji">&#128513; Beaming Face with Smiling Eyes</p>
 </body>
 </html>
