done last execersie

--- a/pages/test.html
+++ b/pages/test.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emoji Encoding Example</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        .emoji {
-            font-size: 2em;
-        }
-    </style>
-</head>
-<body>
-    <h1>Emoji Encoding Examples</h1>
-
-    <p><strong>Hexadecimal Encoding:</strong></p>
-    <p class="emoji">&#x1F600; Grinning Face</p>
-    <p class="emoji">&#x1F603; Smiling Face with Open Mouth</p>
-    <p class="emoji">&#x1F604; Smiling Face with Open Mouth and Smiling Eyes</p>
-    <p class="emoji">&#x1F601; Beaming Face with Smiling Eyes</p>
-
-    <p><strong>Decimal Encoding:</strong></p>
-    <p class="emoji">&#128512; Grinning Face</p>
-    <p class="emoji">&#128515; Smiling Face with Open Mouth</p>
-    <p class="emoji">&#128516; Smiling Face with Open Mouth and Smiling Eyes</p>
-    <p class="emoji">&#128513; Beaming Face with Smiling Eyes</p>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head></head><body><p>&#x1F600;abcdefghijklmnopqrstuvwxtz123456789abcdefghijklmnopqrstuvwxtz123456789שלום</p></body></html>
