add chapter 3 template

--- a/pages/test.html
+++ b/pages/test.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html lang="en"><head></head><body><p>&#x1F600;abcdefghijklmnopqrstuvwxtz123456789abcdefghijklmnopqrstuvwxtz123456789שלום</p></body></html>
+<html>
+
+<head></head>
+
+<body>Mixed <big>big</big> and <small>small</small><br>
+    Mixed <big>big</big> and <small>small</small><br>
+    <p>&lt;&gt;</p>
+    <p>Caf&eacute; &ndash; 50&#37; off! &#x1F600;</p>
+</body>
+    </html>
