--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Page</title>
-</head>
-<body>
-    <p>This is a paragraph<h1 class="title">This is the main title</h1> before the heading.</p>
+<html>
 
-    
+<head></head>
 
-    <p>This is a paragraph after the heading.</p>
+<body>Mixed <big>big</big> and <small>small</small><br>
+    Mixed <big>big</big> and <small>small</small><br>
+    <p>&lt;&gt;</p>
+    <p>Caf&eacute; &ndash; 50&#37; off! &#x1F600;</p>
+
+    <p>This is a paragraph<h1 class="title">This is the main title This is the main titleThis is the main titleThis is the main titleThis is the main title</h1> before the heading.</p>
 </body>
-</html>
+    </html>
