--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -2,11 +2,13 @@
 
 <head></head>
 
-<body>Mixed <big>big</big> and <small>small</small><br>
+<body>
+    <h1 class="title">This is the main title This is the main titleThis is the main titleThis is the main titleThis is the main title</h1>
     Mixed <big>big</big> and <small>small</small><br>
+    Mixed  <big>big</big>  and <small>small</small><br>
     <p>&lt;&gt;</p>
     <p>Caf&eacute; &ndash; 50&#37; off! &#x1F600;</p>
 
-    <p>This is a paragraph<h1 class="title">This is the main title This is the main titleThis is the main titleThis is the main titleThis is the main title</h1> before the heading.</p>
+    <p>This is a <sup>super</sup> paragraph after  heading.</p>
 </body>
     </html>
