implement soft hypens

--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -8,6 +8,7 @@
     Mixed  <big>big</big>  and <small>small</small><br>
     <p>&lt;&gt;</p>
     <p>Caf&eacute; &ndash; 50&#37; off! &#x1F600;</p>
+    <p>“super­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docioussuper­cali­fragi­listic­expi­ali­docious”</p>
 
     <p>This is a <sup>super</sup> paragraph after  heading.</p>
 </body>
