--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-    <h1 class="title">This is the main title This is the main titleThis is the main titleThis is the main titleThis is the main title</h1>
+    <h1 class="title">This   is the main title This is the main titleThis is the main titleThis is the main titleThis is the main title</h1>
     Mixed <big>big</big> and <small>small</small><br>
     Mixed  <big>big</big>  and <small>small</small><br>
     <p>&lt;&gt;</p>
@@ -13,5 +13,12 @@
     <p>This is a <sup>super</sup> paragraph after  heading.</p>
     <abbr>test TEST</abbr>
     <p>This is a <sup>super</sup> paragraph after  heading.</p>
+    <p>1   3</p>
+    <pre>1
+
+        3</pre><p>after pre</p>
+    <pre>1   3 1   3 1   3 1   3 1   31   31 <sup>super</sup>   31   31   31   31   
+        
+        31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   331   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   331   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   331   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   331   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   331   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   331   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   331   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   31   3</pre>
 </body>
-    </html>
+</html> 
