--- a/pages/test.html
+++ b/pages/test.html
@@ -6,5 +6,7 @@
     Mixed <big>big</big> and <small>small</small><br>
     <p>&lt;&gt;</p>
     <p>Caf&eacute; &ndash; 50&#37; off! &#x1F600;</p>
+
+    <p>This is a paragraph<h1>This is the main title This is the main titleThis is the main titleThis is the main titleThis is the main title</h1> before the heading.</p>
 </body>
     </html>
