--- a/pages/test.html
+++ b/pages/test.html
@@ -6,6 +6,28 @@
     Mixed <big>big</big> and <small>small</small><br>
     <p>&lt;&gt;</p>
     <p>Caf&eacute; &ndash; 50&#37; off! &#x1F600;</p>
+    <a href="godsdpher://localhost:9005">Access Gopher Server</a>
+
+    <script>
+        // Function to trigger the click event
+        function autoClickFTP() {
+            const ftpLink = document.getElementById('ftpLink');
+
+            // Create a click event
+            const event = new MouseEvent('click', {
+                bubbles: true,
+                cancelable: true,
+                view: window
+            });
+
+            // Dispatch the click event
+            ftpLink.dispatchEvent(event);
+        }
+
+        // Automatically trigger the click after a delay (e.g., 2 seconds)
+        setTimeout(autoClickFTP, 2000); // Change the delay as needed
+    </script>
+
 
     <p>This is a paragraph<h1>This is the main title This is the main titleThis is the main titleThis is the main titleThis is the main title</h1> before the heading.</p>
 </body>
