finish refractor parse function

--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -4,8 +4,9 @@
 
 <body>
   <div class="container" data-example="Value with >">
-    <a href="https://example.com" title="Link with">Example Link</a>
+    <a href="https://example.com" title="Link with <">Example Link</a>
   </div>
+  <script> conso.log<fdasf>; test</script>
   
    
 </body>
