fix refractor bug

--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -1,13 +1,17 @@
-<html>
+<!-- <html>
 
 <head></head>
 
 <body>
-  <div class="container" data-example="Value with >">
-    <a href="https://example.com" title="Link with <">Example Link</a>
-  </div>
-  <script> conso.log<fdasf>; test</script>
   
+  <div> test
+  test  </div>
+   
+  
+      
+      
    
 </body>
-</html> 
+</html>  -->
+
+<div>test</div>
