new view source parser

--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -1,17 +1,17 @@
-<!-- <html>
-
+<html>
+ 
 <head></head>
 
-<body>
+<body testAttr="hei <sds>">
   
   <div> test
   test  </div>
+
+  <script>test <asds></script>
    
   
       
       
    
 </body>
-</html>  -->
-
-<div>test</div>
+</html> 
