--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -2,12 +2,12 @@
  
 <head></head>
 
-<body testAttr="hei <sds>">
+<body testAttr="hei sds>">
   
   <div> test
   test  </div>
 
-  <script>test <asds></script>
+  <b>Bold <i>both</b> italic</i>
    
   
       
