fix layout bugs

--- a/pages/test.html
+++ b/pages/test.html
@@ -2,7 +2,7 @@
 
 <head></head>
 
-<body>Mixed <big>big</big> and <small>small</small><br>
+<body>Mixed <big>big_text</big> and <small>small_text</small><br>
     Mixed <big>big</big> and <small>small</small><br>
     <p>&lt;&gt;</p>
     <p>Caf&eacute; &ndash; 50&#37; off! &#x1F600;</p>
