--- a/pages/test.html
+++ b/pages/test.html
@@ -8,6 +8,7 @@
 <body>
     <p> <big>big_text</big> and <small>small_text</small> </p>
     <p>re</p>
-    
+    <li>                   test</li>
+    <li>test</li>
 </body>
     </html>
