--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -1,14 +1,18 @@
-<html>
- 
-<head></head>
-
-<body testAttr="hei sds>">
-  
-  <div> test
-  test  </div>
-
-      
-      
-   
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inline Style Blocks</title>
+</head>
+<body style="margin: 0; padding: 0;  gap: 10px; justify-content: center; background-color: #f4f4f4;">
+    <!-- First Block -->
+    <div style="width: 150px; height: 150px; background-color: #4CAF50; color: white;  align-items: center; justify-content: center; border: 2px solid #333; font-size: 18px;">
+        Block 1
+    </div>
+    <!-- Second Block -->
+    <div style="width: 300px; height: 100px; background-color: #2196F3; color: white;  align-items: center; justify-content: center; border: 2px solid #333; font-size: 18px;">
+        Block 2
+    </div>
 </body>
-</html> 
+</html>
