--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -3,15 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inline Style Blocks</title>
+    <title>CSS Classes</title>
+    <style>
+        /* Body styles */
+        body {
+            margin: 0;
+            padding: 0;
+            gap: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f4f4;
+            flex-direction: column; /* To stack blocks vertically */
+            height: 100vh; /* Full viewport height */
+        }
+
+        /* Common block styles */
+        .block {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            border: 2px solid #333;
+            font-size: 18px;
+        }
+
+        /* Specific styles for Block 1 */
+        .block-1 {
+            width: 150px;
+            height: 150px;
+            background-color: #4CAF50;
+        }
+
+        /* Specific styles for Block 2 */
+        .block-2 {
+            width: 300px;
+            height: 100px;
+            background-color: #2196F3;
+        }
+    </style>
 </head>
-<body style="margin: 0; padding: 0;  gap: 10px; justify-content: center; background-color: #f4f4f4;">
+<body>
     <!-- First Block -->
-    <div style="width: 150px; height: 150px; background-color: #4CAF50; color: white;  align-items: center; justify-content: center; border: 2px solid #333; font-size: 18px;">
+    <div class="block block-1">
         Block 1
     </div>
     <!-- Second Block -->
-    <div style="width: 300px; height: 100px; background-color: #2196F3; color: white;  align-items: center; justify-content: center; border: 2px solid #333; font-size: 18px;">
+    <div class="block block-2">
         Block 2
     </div>
 </body>
