--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -3,54 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Classes</title>
+    <title>Three Colored Blocks</title>
     <style>
-        /* Body styles */
-        body {
-            margin: 0;
-            padding: 0;
-            gap: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f4f4f4;
-            flex-direction: column; /* To stack blocks vertically */
-            height: 100vh; /* Full viewport height */
-        }
-
-        /* Common block styles */
-        .block {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            border: 2px solid #333;
-            font-size: 18px;
-        }
-
-        /* Specific styles for Block 1 */
-        .block-1 {
-            width: 150px;
-            height: 150px;
-            background-color: #4CAF50;
-        }
-
-        /* Specific styles for Block 2 */
-        .block-2 {
-            width: 300px;
-            height: 100px;
-            background-color: #2196F3;
+        .third-block {
+            background-color: lightgreen;
+            width: 100%;
+            height: 200px;
         }
     </style>
 </head>
 <body>
-    <!-- First Block -->
-    <div class="block block-1">
-        Block 1
+    <div style="background-color: lightblue; width: 100%; height: 200px;">
+        <p>This is the first block with a light blue background.</p>
     </div>
-    <!-- Second Block -->
-    <div class="block block-2">
-        Block 2
+    <div style="background-color: lightcoral; width: 100%; height: 200px;">
+        <p>This is the second block with a light coral background.</p>
+    </div>
+    <div class="third-block">
+        <p>This is the third block with a light green background.</p>
     </div>
 </body>
 </html>
