--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -1,7 +1,37 @@
-<html>
-  <body>
-    Here is some text that is
-    <br>
-    spread across multiple lines
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mock HTML Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        ul {
+            list-style-type: square;
+        }
+        li {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to the Mock HTML Page</h1>
+    </header>
+    <main>
+        <h2>Sample List</h2>
+        <ul>
+            <li>First item</li>
+            <li>Second item</li>
+            <li>Third item</li>
+            <li>Fourth item</li>
+            <li>Fifth item</li>
+        </ul>
+    </main>
+    <footer>
+        
+    </footer>
+</body>
 </html>
