--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -3,35 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mock HTML Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        ul {
-            list-style-type: square;
-        }
-        li {
-            margin: 5px 0;
-        }
-    </style>
+    <title>Simple HTML Page</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Mock HTML Page</h1>
-    </header>
-    <main>
-        <h2>Sample List</h2>
-        <ul>
-            <li>First item</li>
-            <li>Second item</li>
-            <li>Third item</li>
-            <li>Fourth item</li>
-            <li>Fifth item</li>
-        </ul>
-    </main>
-    <footer>
-        
-    </footer>
+    <h1 class="title">Welcome to My Page</h1>
+    <div>This is a simple HTML page div div some text outside the heading.</div>
+    <div>This is a simple HTML page div div some text outside the heading.</div>
+    <p>This is a simple HTML page with some text outside the heading.</p>
 </body>
 </html>
