add input form value change

--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action="/submit" method="post">
-        
+        <input value="123"> 
         <p><button>Submit!</button></p>
     </form>
 </body>
