--- a/pages/test_h1.html
+++ b/pages/test_h1.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <form action="/submit" method="post">
-        <input value="123"> 
+                <input type="checkbox" checked>
+                <input type="checkbox" checked>
+                <input type="checkbox" checked>
+                <input type="checkbox" checked>
+                <input type="checkbox" >
         <p><button>Submit!</button></p>
     </form>
 </body>
