--- a/pages/bad.html
+++ b/pages/bad.html
@@ -1,3 +1,3 @@
-<html>
-    <body><p>test
-</html>
+<div style="background-color: blue;">
+    <p style="background-color: yellow;">Hello <span>World</span></p>
+</div>
