--- a/web_server/example.html
+++ b/web_server/example.html
@@ -1,2 +1,56 @@
-<html><head><script src="test.js"></script>
-</head><body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mock HTML Page with Colored Divs</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .box {
+            width: 200px;
+            height: 100px;
+            margin: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .red {
+            background-color: red;
+        }
+        .green {
+            background-color: green;
+        }
+        .blue {
+            background-color: blue;
+        }
+        .yellow {
+            background-color: yellow;
+            color: black; /* Make text readable on yellow */
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <div class="box red">Red Box</div>
+    <div class="box green">Green Box</div>
+    <div class="box blue">Blue Box</div>
+    <div class="box yellow">Yellow Box</div>
+</div>
+
+</body>
+</html>
